--- a/package.json
+++ b/package.json
@@ -3,24 +3,42 @@
   "version": "1.0.0",
   "description": "Employee Benefits Calculator",
   "main": "index.js",
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
   "scripts": {
+    "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"**/*.{js, jsx}\"",
-    "dev": "parcel src/index.html"
+    "compile:sass": "node-sass src/sass/main.scss src/css/mainStyle.css -w"
   },
   "keywords": [],
   "author": "Derek Snyder",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "eslint": "^5.13.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
-    "parcel-bundler": "^1.11.0",
-    "prettier": "^1.16.3"
+    "prettier": "^1.16.3",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.2",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1"
   }
 }
